# chatIRC-epitech

./: .gitignore  BACKEND_VERIFICATION.md  CERTIFICATION_BACKEND.md  CORRECTIONS_FINALES.md  DEMARRAGE_RAPIDE.md  FINAL.md  FRONTEND_INTEGRATION.md  INDEX_DOCUMENTATION.md  README.md  RESUME_FINAL_BACKEND.md  STATUS_FINAL.md  SUCCES_FINAL.md  VERIFICATION_FINALE.md  check-backend-status.sh  dbpostgress.mmd  dbwithmongo.mmd  docker-compose.yml  start-and-test.sh  test-backend-complet.sh  test-backend.sh  test-compilation-finale.sh  test-final-compilation.sh  verify-compilation.sh
server/: .dockerignore  .env.example  API_EXAMPLES.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  PROJET_COMPLET.md  QUICKSTART.md  README.md  SOCKET_SPEC.md  SUMMARY.md  TEST_WEBSOCKET.md  main.rs  setup.sh  test-websocket.html
server/.sqlx/: query-06214e651479236ba94a93922ace7db81e83c016cd63789bf496c1bbc3effcf1.json  query-182ecd43088ee4e700611d758f2a4749d005f5c479cea6497bd62663c77c0b9e.json  query-285d951b04555a9be3ada7ac190be91eaf00f257896eb738031ade27eb3272b1.json  query-3419ddfeaf91e66b2a3a1b5d16f9206c1e4db5c6cd6c2ca1219573ab72a05e7c.json  query-43c6c4a5ce483b2cae59bcd95f3b0d27d1dc2a9094b28de8115ceb49cd0f22a4.json  query-4675d82112de114f1d18c2b899f012af6e675bca4da51644fb2f6d0d9c041914.json  query-483a3365a7472e981847d7eec1059db46138c7b68c1b3270dc28d1e540733909.json  query-48ff84880e9f88d4212bab26595a1228eb27cb23422adb0b67944863ef000e2f.json  query-4feb393c3ad0b83e1cace2529fab46b025a47fb737217d1f4745d80403339723.json  query-7c6deb067f5082a5c3874b90b0e9a3baa2569120220bd7bd22756d40aa38df22.json  query-a0565063890944c9513d62f048c92c3d3e5930aaacd3f8871852fee94c96e595.json  query-a72bd1de7584c58391868e46e3eecbe0f415cfe9b7977c1ba8ed68acb23c56dc.json  query-c461349eb39c88f0b27a2900ac57029310a3c72dfce417c755ecc6081f4799b4.json  query-cebea2d55fcac726341ffd11cbba924a1fa92ccc68201a1e785bc34b1755d147.json  query-d0e51736cde9d4cb5ce086269eda14b0d12f2e8c2cfa3eb9690bc02219293c78.json  query-d39bc77bc2a4b94b2e43b9e21a40e1e932a2647a32bc29edaa6cfd7783fdd294.json  query-e7c3ddf7a734db01deebd444b950e0bdbbc4af11b0ee2c8cab535642d47b072a.json  query-f5333da2b17cd11a10caac2ffaca3846799796eee8aff5c31a3b4302f303195b.json  query-f65f1bfea2accc2778f606bef439fdedba83cf950e57d635d65938f7e06f1232.json  query-f99ef4eaaddc45397bd8c69c865d83f4800c642e5629f9d19da715d22728d14c.json
server/database/: init.sql
server/migrations/: 20260128000001_init.down.sql  20260128000001_init.up.sql
server/src/: errors.rs  main.rs  state.rs
(+31 files in other folders)
