[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# --- Core Web & Async ---
# Le framework web pour construire l'API REST
axum = "0.7"
# Le runtime asynchrone, nécessaire pour Axum, SQLx et Socketioxide
tokio = { version = "1", features = ["full"] }

# --- Socket.IO ---
# Implémentation du protocole Socket.IO, compatible avec le client JS
socketioxide = { version = "0.11", features = ["macros"] }

# --- Base de données (PostgreSQL) ---
# Pour interagir avec la base de données de manière asynchrone et sécurisée
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }

# --- Sérialisation & Données ---
# Le standard pour la sérialisation/désérialisation (JSON, etc.)
serde = { version = "1.0", features = ["derive"] }

# --- Utilitaires ---
# Pour le logging et le debug, très utile avec Axum
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }