[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Core Web & Async ---
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }

# --- Socket.IO ---
socketioxide = { version = "0.14", features = [] }

# --- Base de données (PostgreSQL) ---
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }

# --- Sérialisation & Données ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Gestion des erreurs ---
thiserror = "1.0"
anyhow = "1.0"

# --- UUIDs ---
uuid = { version = "1.6", features = ["v4", "serde"] }

# --- Dates et heures ---
chrono = { version = "0.4", features = ["serde"] }

# --- Pour les traits async ---
async-trait = "0.1"

# --- Variables d'environnement ---
dotenvy = "0.15"

# --- Hashage de mot de passe ---
bcrypt = "0.15"

# --- JWT pour l'authentification ---
jsonwebtoken = "9"

# --- CORS pour le frontend ---
tower-http = { version = "0.5", features = ["cors"] }

# --- Génération aléatoire ---
rand = "0.8"

# --- Utilitaires ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }